 o CURLM_ADDED_ALREADY: new error code
 o test TFTP server: support "writedelay" within <servercmd>
 o krb4 support has been removed
 o imap and smtp: added basic SASL XOAUTH2 support [9]

This release includes the following bugfixes:

 o nss: make sure that NSS is initialized
 o curl: make --no-[option] work properly for several options
 o FTP: with socket_action send better socket updates in active mode [1]
 o curl: fix the --sasl-ir in the --help output
 o tests 2032, 2033: Don't hardcode port in expected output
 o urlglob: better detect unclosed braces, empty lists and overflows [7]
 o urlglob: error out on range overflow [8]
 o imap: Fixed response check for SEARCH and EXPUNGE commands [10]
 o handle arbitrary-length username and password [2]
 o TFTP: make the CURLOPT_LOW_SPEED* options work [4]
 o curl.h: name space pollution by "enum type" [5]
 o multi: move on from STATE_DONE faster [6]

This release includes the following known bugs:

 o see docs/KNOWN_BUGS (http://curl.haxx.se/docs/knownbugs.html)

This release would not have looked like this without help, code, reports and
advice from friends like these:

 Alex McLellan, Bill Doyle, Colby Ranger, Fabian Keil, Gisle Vanem,
 John E. Malmberg, Jonathan Nieder, Kamil Dudka, Shawn Landden,
 Tor Arntsen, Will Dietz, Yi Huang, Kyle L. Huff, Steve Holme

        Thanks! (and sorry if I forgot to mention someone)

References to bug reports and discussions on issues:

 [1] = http://curl.haxx.se/mail/lib-2013-08/0043.html
 [2] = http://bugs.debian.org/719856
 [3] = http://daniel.haxx.se/blog/2013/08/20/testing-curl_multi_socket_action/
 [4] = http://curl.haxx.se/bug/view.cgi?id=1269
 [5] = https://github.com/bagder/curl/pull/76
 [6] = http://curl.haxx.se/mail/lib-2013-08/0211.html
 [7] = http://curl.haxx.se/bug/view.cgi?id=1264
 [8] = http://curl.haxx.se/bug/view.cgi?id=1267
 [9] = http://curl.haxx.se/mail/lib-2013-08/0234.html
 [10] = http://curl.haxx.se/mail/lib-2013-08/0136.html